v1.4 --- lots of changes (see CHANGELOG)