@@ -7,15 +7,17 @@
 	  <fileset dir=".">
 	    <include name="*.jar" />
 	  	<exclude name="bart_java.jar" />
-	  	<exclude name="trove-3.0.3.jar" />
 	  </fileset>
 	</path>	
 	
     <target name="compile" description="compile the source code">
       <mkdir dir="class_files"/>
-      <javac srcdir="src" destdir="class_files" includeantruntime="false" target="1.8" source="1.8">
+      <javac srcdir="src" destdir="class_files" includeantruntime="false" release="21">
       	<exclude name="**/package-info.java"/>
       	<classpath refid="master-classpath" />	
+        <compilerarg value="-Xlint:-options" />
+        <compilerarg value="--add-modules" />
+        <compilerarg value="jdk.incubator.vector" />
       </javac>
     </target>	
 	
